<resources>
    <string name="activity_console_label">Console</string>
    <string name="app_name">Multicast Tester</string>
    <string name="clear_console">Clear Console</string>
    <string name="console">Console</string>
    <string name="message_to_send">Message to Send</string>
    <string name="multicast_ip_hint">Multicast IP</string>
    <string name="multicast_port_hint">Multicast Port</string>
    <string name="receive_in_hexadecimal">Receive in Hexadecimal</string>
    <string name="send_message">Send Message</string>
    <string name="start_listening">Start Listening</string>
    <string name="start_streaming">Start Streaming</string>
    <string name="stop_listening">Stop Listening</string>
    <string name="connectivity_lost">Internet connectivity has been lost. Listening has stopped.</string>
    <string name="wifi_connection_required">WiFi Connection Required</string>
    <string name="camera_permission_required">Camera Permission Required</string>
    <string name="camera_permission_instructions">Tap \'Start Streaming\', then accept the permission when requested.</string>
    <string name="stop_streaming">Stop Streaming</string>
    <string name="camera_error">Camera Error</string>
    <string name="camera_error_info">Something went wrong when accessing the camera. Check if another app is currently using the camera. The error message is:</string>
</resources>
