<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StreamFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <EditText
            android:id="@+id/ipField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789."
            android:hint="@string/multicast_ip_hint"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="15" />

        <EditText
            android:id="@+id/portField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/multicast_port_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="5" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startStreamingButton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_streaming"
        app:icon="@drawable/ic_stream" />

    <LinearLayout
        android:id="@+id/cameraPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="#eeeeee"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/cameraPermissionInstructions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/camera_permission_required"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/camera_permission_instructions" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cameraErrorDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/camera_error"
                    android:textSize="24sp"
                    android:drawableStart="@drawable/ic_error"
                    android:drawablePadding="10dp"
                    android:drawableTint="@android:color/tertiary_text_dark"/>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/camera_error_info" />

            <TextView
                android:id="@+id/cameraErrorLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <TextureView
        android:id="@+id/cameraTexture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:visibility="gone" />

</LinearLayout>