<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".console.ConsoleFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <EditText
            android:id="@+id/multicastIP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789."
            android:hint="@string/multicast_ip_hint"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="15" />

        <EditText
            android:id="@+id/multicastPort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/multicast_port_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="5" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startListeningButton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/start_listening"
        app:icon="@drawable/ic_play_arrow" />

    <TextView
        android:id="@+id/wifiNoticeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wifi_connection_required"
        android:textColor="#ff0000"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:text="@string/console"
            android:textSize="18sp" />

        <Button
            android:id="@+id/clearConsoleButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="52dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/ic_clear_all"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:background="#eeeeee"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/consoleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:padding="5dp"/>

    </ScrollView>

    <CheckBox
        android:id="@+id/hexDisplayCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/receive_in_hexadecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/messageToSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/message_to_send"
            android:maxLength="256"
            android:maxLines="4"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/sendMessageButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:enabled="false"
            app:icon="@drawable/ic_send" />
    </LinearLayout>


</LinearLayout>